--- a/configs/init.aries.rc
+++ b/configs/init.aries.rc
@@ -864,13 +864,15 @@ on property:persist.sys.aries.power_profile=high
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 2000000
     write /sys/class/leds/lcd-backlight/max_brightness 255
     write /sys/devices/platform/kgsl-3d0.0/kgsl/kgsl-3d0/max_gpuclk 400000000
-#    stop mpdecision
+    stop mpdecision
     write /sys/devices/system/cpu/cpu1/online 1
     write /sys/devices/system/cpu/cpu2/online 1
     write /sys/devices/system/cpu/cpu3/online 1
     write /sys/devices/system/cpu/cpu1/cpufreq/scaling_max_freq 2000000
     write /sys/devices/system/cpu/cpu2/cpufreq/scaling_max_freq 2000000
     write /sys/devices/system/cpu/cpu3/cpufreq/scaling_max_freq 2000000
+    stop thermald
+    start thermald
 
 on property:persist.sys.aries.power_profile=middle
 #    write /sys/devices/system/cpu/cpufreq/interactive/above_hispeed_delay 100000
@@ -881,7 +883,9 @@ on property:persist.sys.aries.power_profile=middle
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 2000000
     write /sys/class/leds/lcd-backlight/max_brightness 255
     write /sys/devices/platform/kgsl-3d0.0/kgsl/kgsl-3d0/max_gpuclk 400000000
-#    start mpdecision
+    start mpdecision
+    stop thermald
+    start thermald
 
 on property:persist.sys.aries.power_profile=low
 #    write /sys/devices/system/cpu/cpufreq/interactive/above_hispeed_delay 100000
@@ -892,7 +896,9 @@ on property:persist.sys.aries.power_profile=low
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 918000
     write /sys/class/leds/lcd-backlight/max_brightness 70
     write /sys/devices/platform/kgsl-3d0.0/kgsl/kgsl-3d0/max_gpuclk 200000000
-#    start mpdecision
+    start mpdecision
+    stop thermald
+    start thermald
 
 on property:persist.sys.display_prefer=0
     write /sys/devices/virtual/graphics/fb0/msm_fb_dispparam 2
